# G.O.D

./: .gitignore  README.md  Taskfile.yml  bootstrap.sh  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  experiment_with_models.py  pyproject.toml
.dev/: vali.pgsql
.devcontainer/: devcontainer.json
auditing/: audit.py
config/: grafana-validator-errors.json  grafana-validator-general.json  otel-config.yaml  tempo-config.yaml
core/: constants.py  create_config.py  docker_utils.py  utils.py
core/config/: base.yml  base_diffusion.toml  config_handler.py
core/models/: config_models.py  payload_models.py  utility_models.py
dockerfiles/: compose_validator.dockerfile  compose_validator_cycle.dockerfile  miner-diffusion.dockerfile  miner.dockerfile  validator-diffusion.dockerfile  validator.dockerfile
docs/: compute.md  compute.txt  dev.md  miner_advice.md  miner_setup.md  validator_setup.md
docs/auditing/: auditing.md  auditing_setup.md
miner/: server.py
miner/endpoints/: tuning.py
miner/logic/: job_handler.py  training_worker.py
tmp_ds/: alpaca_samples.json  base.yml
utils/: autoupdate_auditor_steps.sh  autoupdate_validator_steps.sh  run_validator_auto_update.py  setup_grafana.sh  start_validator.sh
validator/: asgi.py  prompts.yml  requirements.txt  server.py  test_axolotl.yml
validator/augmentation/: augmentation.py
validator/core/: .cycle.py.swp  config.py  constants.py  cycle.py  models.py  refresh_nodes.py  task_config_models.py  weight_setting.py
validator/cycle/: main.py  process_tasks.py  util_functions.py
validator/db/: constants.py  database.py
validator/db/sql/: auditing.py  nodes.py  tasks.py  (+1 more)
validator/endpoints/: auditing.py  nodes.py  tasks.py
validator/evaluation/: docker_evaluation.py  eval.py  eval_diffusion.py  scoring.py  single_eval.py  utils.py  weight_setting.py
validator/synth/: synth.py
validator/tasks/: diffusion_synth.py  scheduler.py  synthetic_scheduler.py  task_prep.py
validator/tests/: prepare_task_test.py  synth_test.py  test_run_evaluation.py
validator/utils/: cache_clear.py  call_endpoint.py  llm.py  logging.py  minio.py  query_substrate.py  util.py
(+5 files in other folders)
